--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ flask = "*"
 python-dotenv = "*"
 flask-wtf = "*"
 flask-sqlalchemy = "*"
+bootstrap-flask = "*"
 
 [requires]
 python_version = "3.8"
